# TeleFolders

./: .all-contributorsrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
src/: main.py  telefolders.py  telefolders_session_name.session-journal
src/web/: main.html
src/web/css/: components.css.map  components.scss  fonts.css  reset.css  style.css  style.css.map  style.scss
src/web/js/: dataLoaders.js  login.js  main.js
src/web/js/components/HeaderWidget/: index.js
src/web/js/components/LoginWidget/: index.js
src/web/js/components/MainWidget/: index.js
src/web/js/components/PopupWidget/: index.js
src/web/js/components/TableWidget/: index copy.js  index.js
telefolders/: __main__.py  eel_functions.py  tg.py
telefolders/web/: jsdoc.config.json  main.html
telefolders/web/css/: components.css  components.css.map  fonts.css  fonts.css.map  fonts.scss  reset.css  reset.css.map  reset.scss  style.css  style.css.map  style.scss
telefolders/web/docs/: FloatView.html  Header.html  Login.html  Popup.html  Table.html  global.html  index.html  index.js.html  module.exports_module.exports.html
telefolders/web/js/components/FloatViewWidget/: index.js
telefolders/web/js/components/HeaderWidget/: index.js
telefolders/web/js/components/LoginWidget/: index.js
telefolders/web/js/components/MainWidget/: index.js
telefolders/web/js/components/PopupWidget/: index.js
telefolders/web/js/components/TableWidget/: index.js
